--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <div>
   
-
   <app-tabs>
     <app-tab title="Timers">
       <app-timer *ngFor="let timer of timers" init="{{timer}}" 
       (onComplete) = "showEndTimerAlert()"></app-timer>
       <button class="add" (click)="showAddTimer()">+</button>
-    </app-tab>
-      
+    </app-tab>      
     <app-tab title="Crono">
       Crono Not
     </app-tab>
@@ -16,22 +14,20 @@
     </app-tab>
   </app-tabs>
 
-
   
    <app-alert-view [hidden]="!isAddTimerVisible">
      <div header> Titulo </div>
 
     <label>Set the number of seconds for your timer</label>
-    <input [(ngModel)]="time" type="number">
-
+    <input [(ngModel)]="time" type="number" #timerInput>
+    
     <button (click)="hideAddTimer()" class="cancel-button">Cancel</button>
     <button (click)="submitAddTimer()">Ok</button>
   </app-alert-view>
 
-<app-simple-alert-view
-  title="Timer ended"
-message="Contando el final"></app-simple-alert-view>
+<div #alert>
 
- <app-simple-alert-view></app-simple-alert-view>
+</div>
+
 
 </div>
