--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,5 +38,11 @@
             background-color: #444; 
         }
     }
+
+    .time-in{
+        font-weight: 600;
+        color: pink;
+        font-size: 15px;
+    }
     
 }
