--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,9 @@
     <button (click)="submitAddTimer()">Ok</button>
   </app-alert-view>
 
-<div #alert>
+<ng-container #alert>
 
-</div>
+</ng-container>
 
 
 </div>
